@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -37,10 +37,9 @@
  *     Fixed according to the bug 4651181.
  *     Ported from JVMDI.
  *
- * @requires vm.continuations
  * @library /test/lib
- * @compile --enable-preview -source ${jdk.version} classprep01.java
- * @run main/othervm/native --enable-preview -agentlib:classprep01 classprep01
+ * @compile classprep01.java
+ * @run main/othervm/native -agentlib:classprep01 classprep01
  */
 
 public class classprep01 {
@@ -49,8 +48,8 @@ public class classprep01 {
         System.loadLibrary("classprep01");
     }
 
-    native static void getReady();
-    native static int check();
+    native static void getReady(Thread thread);
+    native static int check(Thread thread);
 
     static volatile int result;
     public static void main(String args[]) {
@@ -59,9 +58,9 @@ public class classprep01 {
     }
     public static void testVirtualThread() {
         Thread thread = Thread.startVirtualThread(() -> {
-            getReady();
+            getReady(Thread.currentThread());
             new TestClassVirtual().run();
-            result = check();
+            result = check(Thread.currentThread());
         });
         try {
             thread.join();
@@ -74,9 +73,22 @@ public class classprep01 {
         }
     }
     public static void testPlatformThread() {
-        getReady();
+        Thread otherThread = new Thread(() -> {
+            new TestClass2().run();
+        });
+
+        getReady(Thread.currentThread());
+
+        // should generate the events
         new TestClass().run();
-        result = check();
+
+        // loading classes on other thread should not generate the events
+        otherThread.start();
+        try {
+            otherThread.join();
+        } catch (InterruptedException e) {
+        }
+        result = check(Thread.currentThread());
         if (result != 0) {
             throw new RuntimeException("check failed with result " + result);
         }
@@ -88,7 +100,7 @@ public class classprep01 {
         void run();
     }
 
-     static class TestClass implements TestInterface {
+    static class TestClass implements TestInterface {
         static int i = 0;
         int count = 0;
         static {
@@ -116,5 +128,12 @@ public class classprep01 {
         }
     }
 
+    interface TestInterface2 {
+        void run();
+    }
 
+    static class TestClass2 implements TestInterface2 {
+        public void run() {
+        }
+    }
 }
