@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,19 +21,17 @@
  * questions.
  */
 
-/**
+/*
  * @test
- * @requires vm.debug != true
- * @compile --enable-preview -source ${jdk.version} PinALot.java
- * @run main/othervm --enable-preview PinALot
  * @summary Stress test timed park when pinned
+ * @requires vm.debug != true
+ * @run main PinALot 500000
  */
 
-/**
+/*
  * @test
  * @requires vm.debug == true
- * @compile --enable-preview -source ${jdk.version} PinALot.java
- * @run main/othervm/timeout=300 --enable-preview PinALot 200000
+ * @run main/othervm/timeout=300 PinALot 200000
  */
 
 import java.time.Duration;
